syntax = "proto3";

option csharp_namespace = "GrpcService";

package orders;

service OrderProcessing {
	rpc GetOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest{
	int32 order_id = 1;
}

message OrderResponse{
	Order order = 1;
}

message Order{
	int32 order_id = 1;
	string ship_address = 2;
	string ship_city = 3;
	int32 qty = 4;
}
